crates/sdk/tests/macros/error_trait_impl.stderr
error: (calimero)> trait impls are not supported
  --> tests/macros/error_trait_impl.rs:13:1
   |
13 | impl MyTrait for MyState {
   | ^^^^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyState`
 --> tests/macros/error_trait_impl.rs:6:8
  |
6 | struct MyState;
  |        ^^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyState`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`
